# rocket

./: .gitignore  Cargo.toml  README.md  build.sh  log.txt
src/: log.txt  main.rs
src/res/: app_ui.glade
